deploySalesforceSFDX/objects/Company__c.object
<CustomObject>
   <fields>
      <fullName>Company_ID__c</fullName>
      <displayFormat>CID-{DD}/{MM}-{0}</displayFormat>
      <label>Company ID</label>
      <type>AutoNumber</type>
   </fields>
   <fields>
      <fullName>Date__c</fullName>
      <defaultValue>TODAY()</defaultValue>
      <label>Date</label>
      <type>Date</type>
   </fields>
   <fields>
      <fullName>Publish_Status__c</fullName>
      <label>Publish Status</label>
      <type>Picklist</type>
      <valueSet>
         <restricted>true</restricted>
         <valueSetDefinition>
            <value>
               <fullName>No</fullName>
               <default>true</default>
               <label>No</label>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>Published__c</fullName>
      <defaultValue>false</defaultValue>
      <label>Published</label>
      <type>Checkbox</type>
   </fields>
   <label>Company</label>
   <listViews>
      <fullName>All</fullName>
      <filterScope>Everything</filterScope>
      <label>All</label>
   </listViews>
   <nameField>
      <label>Company Name</label>
      <type>Text</type>
   </nameField>
   <pluralLabel>Companies</pluralLabel>
   <sharingModel>ReadWrite</sharingModel>
   <validationRules>
      <fullName>Date_Validation_Company</fullName>
      <active>true</active>
      <errorConditionFormula>Date__c > TODAY()</errorConditionFormula>
      <errorDisplayField>Date__c</errorDisplayField>
      <errorMessage>Future Date Not Allowed</errorMessage>
   </validationRules>
</CustomObject>